# Field

./: .env.example  .gitignore  CONTRIBUTING.md  DATA_CARD.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: pr.yml
data/generators/: generate_corpus.py  generate_telemetry.py
data/samples/: adversarial_prompt_injection_sample.md  inspection_report_2026_06_14_site_b.md  maintenance_log_ff_r07.md  manual_ff_env_sensor_array.md  manual_ff_r07_inspection_robot.md  sop_methane_survey_response.md  sop_robot_stop_incident_response.md
docs/: EVALUATION_METHODOLOGY.md  INSPIRATION_AND_ATTRIBUTION.md  PRD.md  PROVENANCE.md  ROADMAP.md
docs/adr/: 0001-monorepo-vertical-slice.md  0002-copilot-agent-architecture.md  0003-mesh-agent-protocol.md  0004-ops-quality-gate.md  0005-edge-offline-profile.md
docs/architecture/: COPILOT_OVERVIEW.md  EDGE_OVERVIEW.md  MESH_OVERVIEW.md  OPS_OVERVIEW.md  OVERVIEW.md
docs/threat-model/: THREAT_MODEL.md
evals/baselines/: docs_v1_baseline.json  mesh_scenarios_v1_baseline.json
evals/datasets/: copilot_scenarios_v1.jsonl  docs_qa_v1.jsonl  guardrails_docs_v1.jsonl  mesh_scenarios_v1.jsonl
evals/reports/: copilot_scenarios_v1_report.json  docs_qa_v1_report.json  edge_comparison_v1_report.json  guardrails_docs_v1_report.json  mesh_scenarios_v1_report.json
evals/scorers/: retrieval_scorer.py
infra/docker/: copilot_api.Dockerfile  (+4 more)
scripts/: check_guardrail_gate.py  ingest_eval_reports.py  run_copilot_eval.py  run_edge_comparison_eval.py  run_eval.py  run_mesh_eval.py
(+75 files in other folders)
