[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fieldforge"
version = "0.1.0"
description = "FieldForge AI Suite — monorepo package root (Docs slice 1 + Copilot slice 1)"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "pydantic>=2.9,<3",
    "rank-bm25>=0.2.2,<0.3",
    "pypdf>=5.0,<6",
    "python-multipart>=0.0.12,<0.1",
    "httpx>=0.27,<0.28",
    "scikit-learn>=1.5,<1.6",
    "numpy>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.25",
    "ruff>=0.7,<0.8",
    "mypy>=1.13,<2",
]

[tool.setuptools.packages.find]
where = [
    "packages/contracts",
    "packages/model_adapters",
    "packages/observability",
    "services/ingestion",
    "services/retrieval",
    "services/guardrails",
    "services/agent_copilot",
    "services/anomaly",
    "apps/docs_api",
    "apps/copilot_api",
    "evals",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
